--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -24,6 +24,11 @@
             <a class="nav-link" href="/users/sign_in">Sign in</a>
           </li>
         <% }%>
+        <li class="nav-item">
+          <a class="nav-link" href="/wikis">Wikis
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
