--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -15,6 +15,11 @@
           <li class="nav-item">
             <a class="nav-link" href="/users/sign_out">Sign out</a>
           </li>
+          <% if(currentUser.role === 0) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/upgrade">Upgrade Account</a>
+            </li>
+          <% }%>
         <% } else { %>
         <!-- #2 -->
           <li class="nav-item">
