--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -12,7 +12,7 @@
 
       <% include ../static/partials/messages.ejs %>
 
-      <h1>Upgade to Premium</h1>
+      <h1>Upgrade to Premium</h1>
 
       <hr>
 
