checkpoint 3007 private wikis: complete

--- a/src/views/users/upgrade.ejs
+++ b/src/views/users/upgrade.ejs
@@ -50,6 +50,8 @@
     });
 
     function handleToken(token) {
+      console.log(token);
+
       fetch("upgradeCharge", {
         method: "POST",
         headers: {"Content-Type": "application/json"},
