checkpoint 3006 markdown: complete

--- a/src/views/wikis/show.ejs
+++ b/src/views/wikis/show.ejs
@@ -22,7 +22,10 @@
             <% } %>
         <% } %>
       <hr>
-      <p><%= wiki.body %></p>
+
+
+      <p><%- wiki.body %></p>
+      <!-- <p><%= wiki.body %></p> -->
 
     </main>
 
