--- a/src/views/wikis/index.ejs
+++ b/src/views/wikis/index.ejs
@@ -35,9 +35,40 @@
             <% } %>
 
           </ul>
-          <hr>
 
         <% } %>
+
+
+
+        <h1>Wikis You're a Collaborator On</h1>
+
+        <% var hasCollaborateWikis = false %>
+
+        <ul class="list-group">
+
+          <% wikis.forEach((wiki) => { %>
+
+            <% var collaborators = wiki.collaborators %>
+            <% for(let i = 0; i < collaborators.length; i++){ %>
+
+              <% if(collaborators[i].User.id === currentUser.id){ %>
+                <li class="list-group-item">
+                  <a href="/wikis/<%= wiki.id %>"> <%= wiki.title %> </a>
+                </li>
+                <% hasCollaborateWikis = true; %>
+
+              <% } %>
+            <% } %>
+
+          <% }) %>
+
+          <% if(!hasCollaborateWikis) { %>
+            <p>You are not a collaborator on any wikis.</p>
+          <% } %>
+
+        </ul>
+
+
 
         <h1>Your Public Wikis</h1>
 
@@ -60,7 +91,6 @@
           <% } %>
 
         </ul>
-        <hr>
 
         <% if(currentUser.role === 2) { %>
           <h1>All Private Wikis</h1>
@@ -84,7 +114,6 @@
             <% } %>
 
           </ul>
-          <hr>
 
         <% } %>
 
